--- a/react/public/index.html
+++ b/react/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="icon" href="favicon.ico">
     <base href="/"/>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 <body>
     <div class="app"></div>
